test/files/neg/bug1041.check
bug1041.scala:3: error: type mismatch;
 found   : Int(1)
 required: List[Int]
    case 1 => 4
         ^
one error found
